# wikiwwii_original

./: .gitignore  .pre-commit-config.yaml  README.md  azure-pipelines.yml  makefile  pyproject.toml  test-output.xml
docs/source/: collect.rst  conf.py  index.rst  parse.rst
tests/: _pregenerate_answers.py  test_collect_battles.py  test_parse.py  test_wikiwwii.py
tests/data/pages/: Action at Mechili, 24 January 1941 - Wikipedia.html  Operation Fustian - Wikipedia.html  Polotsk Offensive - Wikipedia.html  The Hardest Day - Wikipedia.html  answers.json
wikiwwii/collect/: battles.py  fronts.py
wikiwwii/parse/: __init__.py  bellengerets.py  casualties.py  clean.py  dates.py  geocode.py  qa.py
