[tool.poetry]
name = "wikiwwii"
version = "0.1.0"
description = "scraper and processor for wikipedia WWII battles"
license = "GNU"
authors = ["Philipp Kats <casyfill@gmail.com>"]
readme = 'README.md'

repository = "https://github.com/Casyfill/wikiwwii"
homepage = "https://github.com/Casyfill/wikiwwii"

keywords = ['wiki', 'wwii', 'data']

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.22"
beautifulsoup4 = "^4.7"
pandas = "^0.24.2"

[tool.poetry.dev-dependencies]
pytest = "^3.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
